--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,35 +59,32 @@
     background-color: #F0F0F2;
   }
 
-  
-}
 
-/* :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+ 
+.shapedividers_com-3195{
+  overflow:hidden;
+  position:relative;
   }
-} */
-
-
-
-
-
-/* body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb)),
-      no-repeat
-
-    )
-    rgb(var(--background-start-rgb));
-} */
+  .shapedividers_com-3195::before{ 
+  content:'';
+  font-family:'shape divider from ShapeDividers.com';
+  position: absolute;
+  z-index: 3;
+  pointer-events: none;
+  background-repeat: no-repeat;
+  bottom: -0.1vw;
+  left: -0.1vw;
+  right: -0.1vw;
+  top: -0.1vw; 
+  background-size: 100% 90px;
+  background-position: 50% 0%;  background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35.278 3.62" preserveAspectRatio="none"><path d="M35.278.092S8.238.267 0 3.62V.092z" opacity=".2" fill="%23f0f0f2"/><path d="M35.278.092S8.238.246 0 3.194V.092z" opacity=".2" fill="%23f0f0f2"/><path d="M35.278.092S8.238.223 0 2.738V.092zM35.278.092H0V0h35.278z" fill="%23f0f0f2"/></svg>'); 
+  }
+  
+  @media (min-width:2100px){
+  .shapedividers_com-3195::before{
+  background-size: 100% calc(2vw + 90px);
+  }
+  }
+   
+}
