glassmorphism nav bar added
Added a glass morphism effect to the nav bar and fixed a bug when hovering a nav bar link the underline animation would not disllay.

--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -7,6 +7,7 @@ ul li.relative {
     bottom: 0;
     left: 0;
     height: 2px;
+    width: 0;
     background-color: #383840;
     transition: width 0.3s ease;
   }
