--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -109,7 +109,7 @@ html {
 }
 
 ::-webkit-scrollbar-thumb {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0,0.5);
+  -webkit-box-shadow: inset 0 0 6px #656573;
   background-color: #F0F0F2;
   border-radius: 10px;
 }
